--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react-swipeable-views": "^0.13.0",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.9",
     "concurrently": "^6.1.0",
