--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.10",
     "nodemon": "^2.0.7",
+    "numeral": "^2.0.6",
     "puppeteer": "^10.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
