--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "immutable": "^4.0.0-rc.12",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
