--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,9 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
-  "proxy": "http://localhost:80",
+  "homepage": ".",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -11,24 +12,24 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
+    "@types/node": "^17.0.23",
     "@types/numeral": "^2.0.1",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.7",
-    "axios": "^0.21.1",
+    "axios": "^0.26.1",
     "date-fns": "^2.22.1",
     "immutable": "^4.0.0-rc.12",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
     "react-swipeable-views": "^0.14.0",
     "recharts": "^2.0.9",
-    "typescript": "~4.1.5"
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
