--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fincell",
   "version": "1.0.0",
   "description": "Market Dashboard",
+  "homepage": ".",
   "main": "server.js",
   "scripts": {
     "client": "npm run start --prefix frontend",
@@ -14,20 +15,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/react-swipeable-views": "^0.13.0",
-    "axios": "^0.21.1",
+    "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.9",
-    "concurrently": "^6.1.0",
-    "connect-mongo": "^4.4.1",
+    "concurrently": "^7.0.0",
     "csv-parser": "^3.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "flatted": "^3.1.1",
-    "mongodb": "^3.6.7",
-    "mongoose": "^5.12.10",
     "nodemon": "^2.0.7",
     "numeral": "^2.0.6",
-    "puppeteer": "^10.0.0",
+    "puppeteer": "^13.5.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "uuid": "^8.3.2"
