--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,8 +2,10 @@
   "name": "frontend",
   "version": "1.0.0",
   "private": true,
-  "homepage": ".",
   "proxy": "http://localhost:8080",
+  "engines": {
+    "node": "16.14.2"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
